--- a/notebooks/scan.ipynb
+++ b/notebooks/scan.ipynb
@@ -1415,7 +1415,7 @@
     "hover.tooltips=[(name, '@' + name) for name in source.column_names]\n",
     "\n",
     "plot = figure()\n",
-    "plot.scatter(x=PARAMETER, y='end_sigma_x', source=source, marker='x', size=10, color='green', legend_label=r'sigma_x')\n",
+    "plot.scatter(x=PARAMETER, y='end_sigma_x', source=source, marker='x', size=10, color='green', legend_label='sigma_x')\n",
     "\n",
     "plot.legend.location = 'top_left'\n",
     "plot.legend.click_policy = 'hide'\n",
