--- a/notebooks/scaner.ipynb
+++ b/notebooks/scaner.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from astra import Astra\n",
     "from astra.evaluate import evaluate_astra\n",
     "from tempfile import mkdtemp\n",
     "from concurrent.futures import ProcessPoolExecutor as Executor\n",
@@ -20,7 +21,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
-    "import logging"
+    "import logging\n",
+    "import json"
    ]
   },
   {
@@ -29,13 +31,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ASTRA_INPUT_FILENAME = 'astra.in'\n",
-    "ASTRA_INPUT_PARAMETERS = {\n",
+    "ASTRA_INPUT_FILE = 'astra.in'\n",
+    "ASTRA_INPUT_DEFAULT_PARAMETERS = Astra(ASTRA_INPUT_FILE).input\n",
+    "ASTRA_INPUT_VARIABLE_PARAMETERS = {\n",
     "    'maxb(2)': [0., 0.1, 0.01],\n",
-    "    'maxe(4)': [-15., 0., 0.1]\n",
+    "    'maxe(4)': [-15., 0., 0.1],\n",
     "}\n",
-    "SCRATCH_DIR = mkdtemp(dir='.')\n",
-    "LOG_FILENAME = 'evaluation.log'"
+    "SCRATCH_DIR = 'tmp700uv792'\n",
+    "LOG_FILE = os.path.join(SCRATCH_DIR, 'evaluation_logs.log')\n",
+    "CACHE_FILE = os.path.join(SCRATCH_DIR, 'evaluation_cache.json')"
    ]
   },
   {
@@ -47,8 +51,7 @@
     "logging.basicConfig(level=logging.DEBUG, \n",
     "                    format='%(asctime)s - %(levelname)s - %(message)s',\n",
     "                    handlers=[\n",
-    "                        logging.FileHandler(os.path.join(SCRATCH_DIR, LOG_FILENAME)),\n",
-    "                        logging.StreamHandler()\n",
+    "                        logging.FileHandler(LOG_FILE),\n",
     "                    ])\n",
     "logger = logging.getLogger(__name__)"
    ]
@@ -56,6 +59,115 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_cache(cache_file):\n",
+    "    if os.path.exists(cache_file):\n",
+    "        with open(cache_file, 'r') as f:\n",
+    "            evaluation_cache = json.load(f)\n",
+    "        logger.info(\"Cache loaded successfully.\")\n",
+    "    else:\n",
+    "        evaluation_cache = {}\n",
+    "        logger.info(\"No cache file found. Starting with an empty cache.\")\n",
+    "    return evaluation_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_cache(evaluation_cache, cache_file):\n",
+    "    with open(cache_file, 'w') as f:\n",
+    "        json.dump(evaluation_cache, f)\n",
+    "    logger.info(\"Cache saved successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_key_recursive(d, key):\n",
+    "  if key in d:\n",
+    "    return d[key]\n",
+    "  for k, v in d.items():\n",
+    "    if type(v) is dict:\n",
+    "      value = find_key_recursive(v, key)\n",
+    "      if value is not None:\n",
+    "        return value\n",
+    "\n",
+    "\n",
+    "def initialize_cache_from_existing_archives(evaluation_cache, scratch_dir):\n",
+    "    archives = [f for f in os.listdir(scratch_dir) if f.endswith('.h5')]\n",
+    "    for archive in archives:\n",
+    "        try:\n",
+    "            astra = Astra.from_archive(os.path.join(scratch_dir, archive))\n",
+    "            settings_key = str({key: find_key_recursive(astra.input, key) for key in ASTRA_INPUT_VARIABLE_PARAMETERS})\n",
+    "            if settings_key not in evaluation_cache:\n",
+    "                evaluation_cache[settings_key] = archive\n",
+    "                logger.info(f\"Added {archive} to cache with key: {settings_key}\")\n",
+    "        except Exception as e:\n",
+    "            logger.error(f\"Error processing archive {archive}: {e}\")\n",
+    "    return evaluation_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluation_cache = load_cache(CACHE_FILE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluation_cache = initialize_cache_from_existing_archives(load_cache(CACHE_FILE), SCRATCH_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_cache(evaluation_cache, CACHE_FILE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate(settings, evaluation_cache):\n",
+    "    logger.debug(f\"Evaluating settings: {settings}\")\n",
+    "\n",
+    "    settings_key = str(settings)\n",
+    "\n",
+    "    if settings_key in evaluation_cache:\n",
+    "        logger.info(f\"Using cached result for settings: {settings}\")\n",
+    "    else:    \n",
+    "        try:\n",
+    "            output = evaluate_astra(settings, astra_input_file=ASTRA_INPUT_FILE, archive_path=SCRATCH_DIR)\n",
+    "            logger.info(f\"Evaluation successful for settings: {settings}, Archive: {output['archive']}\")\n",
+    "            evaluation_cache[settings_key] = output['archive']\n",
+    "            save_cache(evaluation_cache, CACHE_FILE)\n",
+    "        except Exception as e:\n",
+    "            logger.error(f\"Error evaluating settings: {settings}, Exception: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,22 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def evaluate(settings):\n",
-    "    logger.debug(f\"Evaluating settings: {settings}\")\n",
-    "    try:\n",
-    "        output = evaluate_astra(settings, astra_input_file=ASTRA_INPUT_FILENAME, archive_path=SCRATCH_DIR)\n",
-    "        logger.info(f\"Evaluation successful for settings: {settings}, Archive: {output['archive']}\")\n",
-    "    except Exception as e:\n",
-    "        logger.error(f\"Error evaluating settings: {settings}, Exception: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,11 +198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_values = generate_parameter_values(ASTRA_INPUT_PARAMETERS)\n",
+    "param_values = generate_parameter_values(ASTRA_INPUT_VARIABLE_PARAMETERS)\n",
     "settings_combinations = generate_settings_combinations(param_values)"
    ]
   },
@@ -113,81 +210,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-06-05 01:05:21,456 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -15.0}\n",
-      "2024-06-05 01:05:21,456 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -14.9}\n",
-      "2024-06-05 01:05:21,456 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -14.8}\n",
-      "2024-06-05 01:05:21,457 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -14.700000000000001}\n",
-      "2024-06-05 01:05:21,457 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -14.500000000000002}\n",
-      "2024-06-05 01:05:21,457 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -14.400000000000002}\n",
-      "2024-06-05 01:05:21,457 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -14.600000000000001}\n",
-      "2024-06-05 01:05:21,457 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -14.300000000000002}\n",
-      "2024-06-05 01:05:21,458 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -13.800000000000004}\n",
-      "2024-06-05 01:05:21,458 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -13.900000000000004}\n",
-      "2024-06-05 01:05:21,458 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -14.200000000000003}\n",
-      "2024-06-05 01:05:21,458 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -14.100000000000003}\n",
-      "2024-06-05 01:05:21,459 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -13.700000000000005}\n",
-      "2024-06-05 01:05:21,459 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -13.600000000000005}\n",
-      "2024-06-05 01:05:21,458 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -14.000000000000004}\n",
-      "2024-06-05 01:05:21,459 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -13.500000000000005}\n",
-      "2024-06-05 01:15:37,956 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:15:39,614 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:15:39,705 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -14.600000000000001}, Archive: /home/jovyan/work/linac/tmp700uv792/9ee09b28407d2ce76619b9e551b3c514.h5\n",
-      "2024-06-05 01:15:39,724 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -13.400000000000006}\n",
-      "2024-06-05 01:15:39,824 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:15:41,307 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -14.9}, Archive: /home/jovyan/work/linac/tmp700uv792/6096c8956989611411984f72140f53d2.h5\n",
-      "2024-06-05 01:15:41,331 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -13.300000000000006}\n",
-      "2024-06-05 01:15:41,590 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -14.400000000000002}, Archive: /home/jovyan/work/linac/tmp700uv792/64b0add9d0a2fd6e3f8d1f85a068d774.h5\n",
-      "2024-06-05 01:15:41,593 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -13.200000000000006}\n",
-      "2024-06-05 01:15:44,385 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:15:45,952 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -14.500000000000002}, Archive: /home/jovyan/work/linac/tmp700uv792/815cf5d629aee47adab596b6815bc156.h5\n",
-      "2024-06-05 01:15:45,955 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -13.100000000000007}\n",
-      "2024-06-05 01:15:49,001 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:15:49,108 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:15:49,594 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:15:50,148 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:15:51,339 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -14.300000000000002}, Archive: /home/jovyan/work/linac/tmp700uv792/390be7b117928d227080aab92fe8407a.h5\n",
-      "2024-06-05 01:15:51,342 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -13.000000000000007}\n",
-      "2024-06-05 01:15:51,384 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -14.100000000000003}, Archive: /home/jovyan/work/linac/tmp700uv792/e3a9ec30a736d090a7d22d78b2578af3.h5\n",
-      "2024-06-05 01:15:51,387 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -12.900000000000007}\n",
-      "2024-06-05 01:15:51,479 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:15:51,808 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -14.200000000000003}, Archive: /home/jovyan/work/linac/tmp700uv792/1417924ddc2b19f21f9f428a8a99917e.h5\n",
-      "2024-06-05 01:15:51,811 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -12.800000000000008}\n",
-      "2024-06-05 01:15:52,236 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:15:52,254 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -14.8}, Archive: /home/jovyan/work/linac/tmp700uv792/1fde480c1b1b78492023f24fa56dc5c0.h5\n",
-      "2024-06-05 01:15:52,293 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -12.700000000000008}\n",
-      "2024-06-05 01:15:52,708 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:15:53,437 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -15.0}, Archive: /home/jovyan/work/linac/tmp700uv792/b4812a3a7e0e39d8c037b827b901ef22.h5\n",
-      "2024-06-05 01:15:53,440 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -12.600000000000009}\n",
-      "2024-06-05 01:15:53,623 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:15:54,294 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -14.700000000000001}, Archive: /home/jovyan/work/linac/tmp700uv792/7dcb86b019ac06a6b6e97613fdec92e0.h5\n",
-      "2024-06-05 01:15:54,297 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -12.500000000000009}\n",
-      "2024-06-05 01:15:54,439 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:15:54,796 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -13.900000000000004}, Archive: /home/jovyan/work/linac/tmp700uv792/558e5fd77e12fdee7a90b145becc3402.h5\n",
-      "2024-06-05 01:15:54,799 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -12.40000000000001}\n",
-      "2024-06-05 01:15:55,718 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -14.000000000000004}, Archive: /home/jovyan/work/linac/tmp700uv792/4247dea5f222e95b28e635d8a570fef3.h5\n",
-      "2024-06-05 01:15:55,721 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -12.30000000000001}\n",
-      "2024-06-05 01:15:56,442 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -13.700000000000005}, Archive: /home/jovyan/work/linac/tmp700uv792/5c8f6b05e56deac46f6bc065b702cd39.h5\n",
-      "2024-06-05 01:15:56,445 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -12.20000000000001}\n",
-      "2024-06-05 01:15:56,706 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:15:58,725 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -13.800000000000004}, Archive: /home/jovyan/work/linac/tmp700uv792/117d13b15345c102a59ec832b36cd5b7.h5\n",
-      "2024-06-05 01:15:58,727 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -12.10000000000001}\n",
-      "2024-06-05 01:16:00,204 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:16:00,666 - DEBUG - Creating converter from 5 to 3\n",
-      "2024-06-05 01:16:02,461 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -13.600000000000005}, Archive: /home/jovyan/work/linac/tmp700uv792/3de4465d8c2d641a725b3f23c8db30b8.h5\n",
-      "2024-06-05 01:16:02,465 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -12.00000000000001}\n",
-      "2024-06-05 01:16:02,996 - INFO - Evaluation successful for settings: {'maxb(2)': 0.0, 'maxe(4)': -13.500000000000005}, Archive: /home/jovyan/work/linac/tmp700uv792/b134f2b20277010e7d1a3cead2b2883f.h5\n",
-      "2024-06-05 01:16:02,998 - DEBUG - Evaluating settings: {'maxb(2)': 0.0, 'maxe(4)': -11.900000000000011}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with Executor() as executor:\n",
-    "    outputs = list(executor.map(evaluate, settings_combinations))"
+    "    outputs = list(executor.map(evaluate, settings_combinations, evaluation_cache))"
    ]
   },
   {
