--- a/notebooks/finder.ipynb
+++ b/notebooks/finder.ipynb
@@ -15,6 +15,7 @@
    "source": [
     "from astra import Astra\n",
     "from astra.evaluate import default_astra_merit\n",
+    "from concurrent.futures import ProcessPoolExecutor, as_completed\n",
     "import pandas as pd\n",
     "import os"
    ]
@@ -37,12 +38,21 @@
    "source": [
     "outputs = []\n",
     "\n",
-    "for file_name in os.listdir(SCRATCH_DIR):\n",
+    "def process_file(file_name):\n",
     "    if file_name.endswith('.h5'):\n",
     "        astra = Astra.from_archive(os.path.join(SCRATCH_DIR, file_name))\n",
     "        output = default_astra_merit(astra)\n",
     "        output['archive'] = file_name\n",
-    "        outputs.append(output)"
+    "        return output\n",
+    "    return None\n",
+    "\n",
+    "with ProcessPoolExecutor() as executor:\n",
+    "    futures = {executor.submit(process_file, file_name): file_name for file_name in os.listdir(SCRATCH_DIR)}\n",
+    "\n",
+    "    for future in as_completed(futures):\n",
+    "        result = future.result()\n",
+    "        if result is not None:\n",
+    "            outputs.append(result)\n"
    ]
   },
   {
@@ -666,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.19"
   },
   "vscode": {
    "interpreter": {
